<resources>
    <string name="app_name">FAMI MUTUAL FUND APPLICATION</string>
    <string name="create_account"><font color="#00ff00">text</font></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="back_to_login">Back to Login</string>
    <string name="linktofami">a. What is about <a href="https://fami.com.ph/">FAMI?</a></string>
</resources>